--- a/index.html
+++ b/index.html
@@ -1,73 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- displays site properly based on user's device -->
+  <link rel="stylesheet" href="styles/main.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Raleway:wght@100&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css"
+    integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
+
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
 
-  Features
-  Team
-  Sign In
+  <nav class="nav-bar">
+    <ul>
+      <li><img src="images/logo.svg" id="logo" alt="logo"></li>
+      <li><a href="#features">Features</a></li>
+      <li><a href="#team">Team</a></li>
+      <li><a href="#sign">Sign in</a></li>
+    </ul>
+  </nav>
 
-  All your files in one secure location, accessible anywhere.
+  <section class="art-welcome">
+    <div class="welcome">
+      <h1><span>All your files</span><span>in one secure</span></h1>
+    </div>
+    <div class="welcome2">
+      <h1><span>location,</span><span>accessible anywhere.</span></h1>
+    </div>
 
-  Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
+    <section class="parrafo">
+      <div class="parrafo">
+        <p>Fylo stores your most important files in one secure location.
+          Access </br> them wherever you need, share and collaborate with friends,family,</br> and co-workers.</p>
+      </div>
+    </section>
 
-  Get Started
+    <div class="boton-welcome">
+      <section>
+        <form class="col-6">
+          <div class="form-control">
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <button type="submit" class="btn btn-primary">Get Started</button>
+        </form>
+      </section>
 
-  Stay productive, wherever you are
+      <section class="card-title">
+        <div>
+          <img src="images/illustration-1.svg" id="imagen1" alt="ilustracion1">
+        </div>
+      </section>
 
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
 
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
+      <!-- 
+    Get Started
 
-  See how Fylo works
+    Stay productive, wherever you are
 
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
+    Never let location be an issue when accessing your files. Fylo has you
+    covered for all of your file storage needs.
 
-  Kyle Burton
-  Founder & CEO, Huddle
+    Securely share files and folders with friends, family and colleagues for
+    live collaboration. No email attachments required!
 
-  Get early access today
+    See how Fylo works
 
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
+    Fylo has improved our team productivity by an order of magnitude. Since
+    making the switch our team has become a well-oiled collaboration machine.
 
-  Get Started For Free
+    Kyle Burton
+    Founder & CEO, Huddle
 
-  Phone: +1-543-123-4567
-  example@fylo.com
+    Get early access today
 
-  About Us
-  Jobs
-  Press
-  Blog
+    It only takes a minute to sign up and our free starter tier is extremely generous.
+    If you have any questions, our support team would be happy to help you.
 
-  Contact Us
-  Terms
-  Privacy
+    Get Started For Free
 
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+    Phone: +1-543-123-4567
+    example@fylo.com
+
+    About Us
+    Jobs
+    Press
+    Blog
+
+    Contact Us
+    Terms
+    Privacy
+
+    <footer>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Your Name Here</a>.
+      </p>
+    </footer> -->
 </body>
+
 </html>
