--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- displays site properly based on user's device -->
+  <script
+  src="https://kit.fontawesome.com/4faa9fe1ce.js"
+  crossorigin="anonymous"></script>
   <link rel="stylesheet" href="styles/main.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Raleway:wght@100&display=swap"
     rel="stylesheet">
-<title>Frontend Mentor | Fylo landing page with two column layout</title>
+  <title>Frontend Mentor | Fylo landing page with two column layout</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
@@ -26,7 +29,7 @@
       <li><a href="#sign">Sign in</a></li>
     </ul>
   </nav>
-
+  <!---seccion principal ----->
   <section class="art-welcome">
     <div class="welcome">
       <h1><span>All your files</span><span>in one secure</span></h1>
@@ -44,10 +47,10 @@
 
     <div class="boton-welcome">
       <section>
-        <form class="col-6">
-          <div class="form-control">
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <button type="submit" class="btn btn-primary">Get Started</button>
+        <form class="welcome">
+          <div class="form-welcome">
+            <input type="email" class="form" id="email" placeholder="Enter you email">
+            <button type="submit">Get Started</button>
         </form>
       </section>
 
@@ -56,52 +59,109 @@
           <img src="images/illustration-1.svg" id="imagen1" alt="ilustracion1">
         </div>
       </section>
+      <!---seccion principal ----->
 
 
-      <!-- 
-    Get Started
 
-    Stay productive, wherever you are
+      <!---maquetado de Jhonatan-->
+      <section class="parte-gris">
+        <div class=""><!---falta poner la parte gris-->
+          <h2>stay productive wherever you are<h2>
+              <article>
+                <p>
+                  Never let location be an issue an accesing your files.Fylo has you covered
+                  for all of your file storage needs.
+                </p>
+                <p>
+                  Securely share file and folders with friends,family and colleges for live colalaboration.
+                  No email attachaments required!
+                </p>
+              </article>
+              <a href="#">see how flyo works</a>
+        </div>
+      </section>
+      <section><!---ahora reviso bien esto siga con lo otro para que nos rinda el tiempo--> 
+        
+      <div>
+        <article>
+          <p>
+            Fylo has improved our team productivity by an order of magnitude. Since
+            making the switch our team has become a well-oiled collaboration machine.</p>
+        </article>
+        <figure>
+          <img src="./images/avatar-testimonial.jpg">
+          <figcaption>Kyle Burton
+            Founder & CEO, Huddle</figcaption>
+        </figure>
+      </div>
+  </section>
+  <section class="card-title1">
+    <div>
+      <img src="images/illustration-2.svg" id="imagen2" alt="ilustracion2">
+    </div>
+  </section>
 
-    Never let location be an issue when accessing your files. Fylo has you
-    covered for all of your file storage needs.
+  <!---maquetado de Jhonatan-->
 
-    Securely share files and folders with friends, family and colleagues for
-    live collaboration. No email attachments required!
 
-    See how Fylo works
+  <!---maquetado de andrea-->
 
-    Fylo has improved our team productivity by an order of magnitude. Since
-    making the switch our team has become a well-oiled collaboration machine.
+  <section class="Get-early">
+    <div class="">
+      <h1> Get early access today </h1>
+      <p>It only takes a minute to sign up and our free starter tier is extremely generous.
+        If you have any questions, our support team would be happy to help you.</p>
+    </div>
+  </section>
 
-    Kyle Burton
-    Founder & CEO, Huddle
+  <section class="boton-get">
+    <div>
+      <form class="get-stared">
+        <div class="form-get-stared">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <button type="submit" class="btn btn-primary">Get Started</button>
+      </form>
+    </div>
+  </section>
 
-    Get early access today
+<!---maquetado de andrea-->
 
-    It only takes a minute to sign up and our free starter tier is extremely generous.
-    If you have any questions, our support team would be happy to help you.
 
-    Get Started For Free
-
-    Phone: +1-543-123-4567
-    example@fylo.com
-
-    About Us
-    Jobs
-    Press
-    Blog
-
-    Contact Us
-    Terms
-    Privacy
-
+<!---maquetado    jhonatan-->
     <footer>
-      <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
-      </p>
-    </footer> -->
+      <div>
+        <i class="fab fa-facebook"></i>
+
+      </div>
+    </footer>
+
+<!--maquetado Jhonatan-->
 </body>
 
-</html>
+</html>partegrisproductive
+      <div>
+     <a> <i class="fas fa-phone-alt"></i>Phone: +1-543-123-4567</a>
+      </div>
+      <div>
+        <ul>
+          <li>About Us</li>
+          <li>Jobs</li>
+          <li>Press</li>
+          <li>Blogg</li>
+        </ul>
+      </div>
+  
+      <div>
+        <ul>
+          <li>Contact Us</li>
+          <li>Terms</li>
+          <li>Privacy</li>
+        </ul>
+      </div>
+  
+      <div>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+      </div><a></a>       <a> <i class="fab fa-twitter"></i></a>
+      <a>  <i class="fab fa-instagram"></i></a>
