--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- displays site properly based on user's device -->
-  <script
-  src="https://kit.fontawesome.com/4faa9fe1ce.js"
-  crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/4faa9fe1ce.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="styles/main.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
@@ -64,8 +62,9 @@
 
 
       <!---maquetado de Jhonatan-->
-      <section class="parte-gris">
-        <div class=""><!---falta poner la parte gris-->
+      <section class="partegris">
+        <div class="">
+          <!---falta poner la parte gris-->
           <h2>stay productive wherever you are<h2>
               <article>
                 <p>
@@ -80,88 +79,86 @@
               <a href="#">see how flyo works</a>
         </div>
       </section>
-      <section><!---ahora reviso bien esto siga con lo otro para que nos rinda el tiempo--> 
-        
-      <div>
-        <article>
-          <p>
-            Fylo has improved our team productivity by an order of magnitude. Since
-            making the switch our team has become a well-oiled collaboration machine.</p>
-        </article>
-        <figure>
-          <img src="./images/avatar-testimonial.jpg">
-          <figcaption>Kyle Burton
-            Founder & CEO, Huddle</figcaption>
-        </figure>
-      </div>
-  </section>
-  <section class="card-title1">
-    <div>
-      <img src="images/illustration-2.svg" id="imagen2" alt="ilustracion2">
+      <section>
+        <!---ahora reviso bien esto siga con lo otro para que nos rinda el tiempo-->
+
+        <div>
+          <article>
+            <p>
+              Fylo has improved our team productivity by an order of magnitude. Since
+              making the switch our team has become a well-oiled collaboration machine.</p>
+          </article>
+          <figure>
+            <img src="./images/avatar-testimonial.jpg">
+            <figcaption>Kyle Burton
+              Founder & CEO, Huddle</figcaption>
+          </figure>
+        </div>
+      </section>
+      <section class="card-title1">
+        <div>
+          <img src="images/illustration-2.svg" id="imagen2" alt="ilustracion2">
+        </div>
+      </section>
+
+      <!---maquetado de Jhonatan-->
+
+
+      <!---maquetado de andrea-->
+
+      <section class="Get-early">
+        <div class="">
+          <h1> Get early access today </h1>
+          <p>It only takes a minute to sign up and our free starter tier is extremely generous.
+            If you have any questions, our support team would be happy to help you.</p>
+        </div>
+      </section>
+
+      <section class="boton-get">
+        <div>
+          <form class="get-stared">
+            <div class="form-get-stared">
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <button type="submit" class="btn btn-primary">Get Started</button>
+          </form>
+        </div>
+      </section>
+
+      <!---maquetado de andrea-->
+
+
+      <!---maquetado    jhonatan-->
+      <footer>
+        <div>
+          <a> <i class="fas fa-phone-alt"></i>Phone: +1-543-123-4567</a>
+        </div>
+        <div>
+          <ul>
+            <li>About Us</li>
+            <li>Jobs</li>
+            <li>Press</li>
+            <li>Blogg</li>
+          </ul>
+        </div>
+
+        <div>
+          <ul>
+            <li>Contact Us</li>
+            <li>Terms</li>
+            <li>Privacy</li>
+          </ul>
+        </div>
+
+        <div>
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+        </div><a></a> <a> <i class="fab fa-twitter"></i></a>
+        <a> <i class="fab fa-instagram"></i></a>
     </div>
-  </section>
-
-  <!---maquetado de Jhonatan-->
-
-
-  <!---maquetado de andrea-->
-
-  <section class="Get-early">
-    <div class="">
-      <h1> Get early access today </h1>
-      <p>It only takes a minute to sign up and our free starter tier is extremely generous.
-        If you have any questions, our support team would be happy to help you.</p>
-    </div>
-  </section>
-
-  <section class="boton-get">
-    <div>
-      <form class="get-stared">
-        <div class="form-get-stared">
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <button type="submit" class="btn btn-primary">Get Started</button>
-      </form>
-    </div>
-  </section>
-
-<!---maquetado de andrea-->
-
-
-<!---maquetado    jhonatan-->
-    <footer>
-      <div>
-        <i class="fab fa-facebook"></i>
-
-      </div>
     </footer>
 
-<!--maquetado Jhonatan-->
+    <!--maquetado Jhonatan-->
 </body>
 
-</html>partegrisproductive
-      <div>
-     <a> <i class="fas fa-phone-alt"></i>Phone: +1-543-123-4567</a>
-      </div>
-      <div>
-        <ul>
-          <li>About Us</li>
-          <li>Jobs</li>
-          <li>Press</li>
-          <li>Blogg</li>
-        </ul>
-      </div>
-  
-      <div>
-        <ul>
-          <li>Contact Us</li>
-          <li>Terms</li>
-          <li>Privacy</li>
-        </ul>
-      </div>
-  
-      <div>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
-      </div><a></a>       <a> <i class="fab fa-twitter"></i></a>
-      <a>  <i class="fab fa-instagram"></i></a>
+</html>
