--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <!---maquetado de Jhonatan-->
       <section class="partegris">
-        <div class="">
+        <div class="productive">
           <!---falta poner la parte gris-->
           <h2>stay productive wherever you are<h2>
               <article>
