Subiendo cambios en el css

--- a/index.html
+++ b/index.html
@@ -106,17 +106,14 @@
 
       <!---maquetado de andrea-->
 
-      <section class="Get-early">
+      <section class="sec-get-early">
         <div class="">
           <h1> Get early access today </h1>
           <p>It only takes a minute to sign up and our free starter tier is extremely generous.
             If you have any questions, our support team would be happy to help you.</p>
         </div>
-      </section>
-
-      <section class="boton-get">
         <div>
-          <form class="get-stared">
+          <form class="get-early">
             <div class="form-get-stared">
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
               <button type="submit" class="btn btn-primary">Get Started</button>
