--- a/index.html
+++ b/index.html
@@ -79,10 +79,8 @@
               <a href="#">see how flyo works</a>
         </div>
       </section>
-      <section>
-        <!---ahora reviso bien esto siga con lo otro para que nos rinda el tiempo-->
-
-        <div>
+      <section class="cuadro">
+       <div>
           <article>
             <p>
               Fylo has improved our team productivity by an order of magnitude. Since
