Subiendo cambios en el css

--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
       <section class="sec-get-early">
         <div class="">
           <h1> Get early access today </h1>
-          <p>It only takes a minute to sign up and our free starter tier is extremely generous.
-            If you have any questions, our support team would be happy to help you.</p>
+          <p>It only takes a minute to sign up and our free starter tier</br> is extremely generous.
+            If you have any questions, our support team </br>would be happy to help you.</p>
         </div>
         <div>
           <form class="get-early">
             <div class="form-get-stared">
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <button type="submit" class="btn btn-primary">Get Started</button>
+              <input type="email" class="form-control" placeholder="email@example.com">
+              <button type="submit">Get Started For Free</button>
           </form>
         </div>
       </section>
