--- a/index.html
+++ b/index.html
@@ -79,25 +79,25 @@
               <a href="#">see how flyo works</a>
         </div>
       </section>
-      <section class="cuadro">
-       <div>
+      <div class="parte">
+        <section class="partegris">
           <article>
-            <p>
-              Fylo has improved our team productivity by an order of magnitude. Since
-              making the switch our team has become a well-oiled collaboration machine.</p>
+            <h2>titulo</h2>
+            <p>parrafooooooooooo</p>
+            <a href=""></a>
           </article>
-          <figure>
+          <!-- tarjeta -->
+          <div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas cupiditate nesciunt reiciendis quasi consequuntur, voluptas ad vitae maxime a deleniti tempora. Laboriosam iusto dolore quo perspiciatis saepe pariatur sint laudantium?</p>
             <img src="./images/avatar-testimonial.jpg">
-            <figcaption>Kyle Burton
-              Founder & CEO, Huddle</figcaption>
-          </figure>
-        </div>
-      </section>
-      <section class="card-title1">
-        <div>
-          <img src="images/illustration-2.svg" id="imagen2" alt="ilustracion2">
-        </div>
-      </section>
+            <p>Kyle Burton Founder & CEO, Huddle</p> 
+          </div>
+        </section>
+        <!-- imagen -->
+        <section class="card-title1">
+            <img src="images/illustration-2.svg" id="imagen2" alt="ilustracion2">
+        </section>
+      </div>
 
       <!---maquetado de Jhonatan-->
 
@@ -108,7 +108,7 @@
         <div class="">
           <h1> Get early access today </h1>
           <p>It only takes a minute to sign up and our free starter tier</br> is extremely generous.
-            If you have any questions, our support team </br>would be happy to help you.</p>
+            If you have any questions, our support team <br/>would be happy to help you.</p>
         </div>
         <div>
           <form class="get-early">
