--- a/index.html
+++ b/index.html
@@ -28,45 +28,56 @@
     </ul>
   </nav>
   <!---seccion principal ----->
-  <section class="art-welcome">
-    <div class="welcome">
-      <h1><span>All your files</span><span>in one secure</span></h1>
-    </div>
-    <div class="welcome2">
-      <h1><span>location,</span><span>accessible anywhere.</span></h1>
-    </div>
-
-    <section class="parrafo">
-      <div class="parrafo">
-        <p>Fylo stores your most important files in one secure location.
-          Access </br> them wherever you need, share and collaborate with friends,family,</br> and co-workers.</p>
+ 
+<div class="principal">
+        <section class="welcome">
+          <h1><span>All your files in one secure
+            location,accessible anywhere.</span></h1>
+            <div class="parrafo1">
+              <p>Fylo stores your most important files in one secure location.
+                Access </br> them wherever you need, share and collaborate with friends,family,</br> and co-workers.</p>
+              <a href="#">see how flyo works</a>
+          </div>
+          <section class="card-title">
+            <div>
+              <img src="images/illustration-1.svg" id="imagen1" alt="ilustracion1">
+            </div>
+          </section>
+            <div class="boton-welcome">
+              <section>
+                <form class="welcome">
+                  <div class="form-welcome">
+                    <input type="email" class="form" id="email" placeholder="Enter you email">
+                    <button type="submit">Get Started</button>
+                </form>
+              </section>
+            </div>
       </div>
-    </section>
 
-    <div class="boton-welcome">
-      <section>
-        <form class="welcome">
-          <div class="form-welcome">
-            <input type="email" class="form" id="email" placeholder="Enter you email">
-            <button type="submit">Get Started</button>
-        </form>
-      </section>
+     
 
-      <section class="card-title">
-        <div>
-          <img src="images/illustration-1.svg" id="imagen1" alt="ilustracion1">
-        </div>
-      </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
       <!---seccion principal ----->
 
 
 
       <!---maquetado de Jhonatan-->
-      <section class="partegris">
-        <div class="productive">
-          <!---falta poner la parte gris-->
-          <h2>stay productive wherever you are<h2>
-              <article>
+      <div class="parte">
+        <section class="partegris">
+          <div class="productive">
+            <h2>stay productive wherever you are<h2>
                 <p>
                   Never let location be an issue an accesing your files.Fylo has you covered
                   for all of your file storage needs.
@@ -75,31 +86,19 @@
                   Securely share file and folders with friends,family and colleges for live colalaboration.
                   No email attachaments required!
                 </p>
-              </article>
               <a href="#">see how flyo works</a>
-        </div>
-      </section>
-      <div class="parte">
-        <section class="partegris">
-          <article>
-            <h2>titulo</h2>
-            <p>parrafooooooooooo</p>
-            <a href=""></a>
-          </article>
-          <!-- tarjeta -->
+          </div>
           <div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas cupiditate nesciunt reiciendis quasi consequuntur, voluptas ad vitae maxime a deleniti tempora. Laboriosam iusto dolore quo perspiciatis saepe pariatur sint laudantium?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe voluptates, debitis aut architecto nemo a, quisquam quas odio repellat modi accusamus facere voluptatum laborum molestiae iure consequuntur alias voluptatem minus!</p>
             <img src="./images/avatar-testimonial.jpg">
             <p>Kyle Burton Founder & CEO, Huddle</p> 
           </div>
         </section>
-        <!-- imagen -->
         <section class="card-title1">
             <img src="images/illustration-2.svg" id="imagen2" alt="ilustracion2">
         </section>
       </div>
-
-      <!---maquetado de Jhonatan-->
+     
 
 
       <!---maquetado de andrea-->
@@ -148,11 +147,9 @@
           <a href=""></a>
           <a href=""></a>
           <a href=""></a>
-        </div><a></a> <a> <i class="fab fa-twitter"></i></a>
-        <a> <i class="fab fa-instagram"></i></a>
-    </div>
+      </div>
     </footer>
-
+  
     <!--maquetado Jhonatan-->
 </body>
 
