--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
       <div class="parte">
         <section class="partegris">
           <div class="productive">
+            <!---falta poner la parte gris-->
             <h2>stay productive wherever you are<h2>
+              <article>
                 <p>
                   Never let location be an issue an accesing your files.Fylo has you covered
                   for all of your file storage needs.
@@ -70,28 +72,21 @@
                   Securely share file and folders with friends,family and colleges for live colalaboration.
                   No email attachaments required!
                 </p>
+              </article>
               <a href="#">see how flyo works</a>
-        </div>
-      </section>
-      <section class="cuadro">
-        <div>
-          <article>
-            <p>
-              Fylo has improved our team productivity by an order of magnitude. Since
-              making the switch our team has become a well-oiled collaboration machine.</p>
-          </article>
-          <figure>
+          </div>
+          <!-- tarjeta -->
+          <div>
+            <p></p>
             <img src="./images/avatar-testimonial.jpg">
-            <figcaption>Kyle Burton
-              Founder & CEO, Huddle</figcaption>
-          </figure>
-        </div>
-      </section>
-      <section class="card-title1">
-        <div>
-          <img src="images/illustration-2.svg" id="imagen2" alt="ilustracion2">
-        </div>
-      </section>
+            <p>Kyle Burton Founder & CEO, Huddle</p> 
+          </div>
+        </section>
+        <!-- imagen -->
+        <section class="card-title1">
+            <img src="images/illustration-2.svg" id="imagen2" alt="ilustracion2">
+        </section>
+      </div>
 
       <!---maquetado de Jhonatan-->
 
