--- a/index.html
+++ b/index.html
@@ -19,25 +19,31 @@
 
 <body>
 
-  <nav class="nav-bar">
-    <ul>
-      <li><img src="images/logo.svg" id="logo" alt="logo"></li>
-      <li><a href="#features">Features</a></li>
-      <li><a href="#team">Team</a></li>
-      <li><a href="#sign">Sign in</a></li>
-    </ul>
+ <nav class="navbar">
+    <div class="container">
+      <div class="logo-container">
+        <img class="logo" src="./images/logo.svg" alt="logo" />
+      </div>
+      <div class="navbar-menu">
+        <ul>
+          <li><a href="#features">Features</a></li>
+          <li><a href="#team">Team</a></li>
+          <li><a href="#sign">Sign in</a></li>
+        </ul>
+      </div>
+    </div>
   </nav>
   <!---seccion principal ----->
  
 <div class="principal">
-        <section class="welcome">
+        <section class="welcome2">
+          <div class="parrofo1">
           <h1><span>All your files in one secure
             location,accessible anywhere.</span></h1>
-            <div class="parrafo1">
               <p>Fylo stores your most important files in one secure location.
-                Access </br> them wherever you need, share and collaborate with friends,family,</br> and co-workers.</p>
-              <a href="#">see how flyo works</a>
-          </div>
+                Access them wherever you need, share and collaborate with friends,family,and co-workers.</p>
+        </section>
+      </div>
           <section class="card-title">
             <div>
               <img src="images/illustration-1.svg" id="imagen1" alt="ilustracion1">
