--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
               <a href="#">see how flyo works</a>
           </div>
           <!-- tarjeta -->
-          <div>
-            <p></p>
+          <div class="tarjeta">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat soluta minima unde quisquam aperiam, rem dolores at quas voluptatum quidem, sequi placeat porro et tempora iure excepturi aspernatur, accusamus ipsa!</p>
             <img src="./images/avatar-testimonial.jpg">
             <p>Kyle Burton Founder & CEO, Huddle</p> 
           </div>
