--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
           <div class="tarjeta">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat soluta minima unde quisquam aperiam, rem dolores at quas voluptatum quidem, sequi placeat porro et tempora iure excepturi aspernatur, accusamus ipsa!</p>
             <img src="./images/avatar-testimonial.jpg">
-            <p>Kyle Burton Founder & CEO, Huddle</p> 
+            <span>Kyle Burton Founder</span> 
+            <strong>CEO, Huddle</strong>
           </div>
         </section>
         <!-- imagen -->
