--- a/index.html
+++ b/index.html
@@ -118,7 +118,16 @@
       <!---maquetado    jhonatan-->
       <footer>
         <div>
-          <a> <i class="fas fa-phone-alt"></i>Phone: +1-543-123-4567</a>
+          <a>
+            <img src="./images/logo.svg">
+          </a>
+          <br>
+          <a> 
+          <i class="fas fa-phone-alt">Phone: +1-543-123-4567</i></a>
+          <br>
+          <a>
+            <img src="/images/icon-email.svg">
+          </a>
         </div>
         <div>
           <ul>
@@ -138,9 +147,9 @@
         </div>
 
         <div>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
+          <a href=""><i class="fab fa-facebook"></i></a>
+          <a href=""><i class="fab fa-twitter"></i></a>
+          <a href=""><i class="fab fa-instagram"></i></a>
       </div>
     </footer>
   
