--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <footer>
         <div>
           <a>
-            <img src="./images/logo.svg">
+            <img src="./images/logo.svg" class="blur">
           </a>
           <br>
           <a> 
