--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <i class="fas fa-phone-alt">Phone: +1-543-123-4567</i></a>
           <br>
           <a>
-            <img src="/images/icon-email.svg">
+            <img src="/images/icon-email.svg"> example@flyo.com
           </a>
         </div>
         <div>
