--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Raleway:wght@100&display=swap"
     rel="stylesheet">
-  <title>Frontend Mentor | Fylo landing page with two column layout</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <title>Fylo</title>
 </head>
 
 <body>
 
- <nav class="navbar">
+  <nav class="navbar">
     <div class="container">
       <div class="logo-container">
         <img class="logo" src="./images/logo.svg" alt="logo" />
@@ -33,127 +31,115 @@
       </div>
     </div>
   </nav>
-  <!---seccion principal ----->
- 
-<div class="principal">
-        <section class="welcome2">
-          <div class="parrofo1">
-          <h1><span>All your files in one secure
+
+
+  <div class="principal">
+    <section class="welcome2">
+      <div class="parrofo1">
+        <h1><span>All your files in one secure
             location,accessible anywhere.</span></h1>
-              <p>Fylo stores your most important files in one secure location.
-                Access them wherever you need, share and collaborate with friends,family,and co-workers.</p>
-        </section>
+        <p>Fylo stores your most important files in one secure location.
+          Access them wherever you need, share and collaborate with friends,family,and co-workers.</p>
+    </section>
     <section class="card-title">
-            <div>
-              <img src="images/illustration-1.svg" id="imagen1" alt="ilustracion1">
-            </div>
-          </section>
-            <div class="boton-welcome">
-                <form class="welcome">
-                  <div class="form-welcome">
-                    <input type="email" class="form" id="email" placeholder="Enter you email">
-                    <button type="submit">Get Started</button>
-                </form>
-            </div>
+      <div>
+        <img src="images/illustration-1.svg" id="imagen1" alt="ilustracion1">
       </div>
-<!---seccion principal ----->
+    </section>
+    <div class="boton-welcome">
+      <form class="welcome">
+        <div class="form-welcome">
+          <input type="email" class="form" id="email" placeholder="Enter you email">
+          <button type="submit">Get Started</button>
+      </form>
+    </div>
+  </div>
 
-
-
-      <!---maquetado de Jhonatan-->
-      <div class="parte">
-        <section class="partegris">
-          <div class="productive">
-            <!---falta poner la parte gris-->
-            <h2>stay productive wherever you are<h2>
-              <article>
-                <p>
-                  Never let location be an issue an accesing your files.Fylo has you covered
-                  for all of your file storage needs.
-                </p>
-                <p>
-                  Securely share file and folders with friends,family and colleges for live colalaboration.
-                  No email attachaments required!
-                </p>
-              </article>
-              <a href="#">see how flyo works</a>
-          </div>
-          <!-- tarjeta -->
-          <div class="tarjeta">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat soluta minima unde quisquam aperiam, rem dolores at quas voluptatum quidem, sequi placeat porro et tempora iure excepturi aspernatur, accusamus ipsa!</p>
-            <img src="./images/avatar-testimonial.jpg">
-            <span>Kyle Burton Founder</span> 
-            <strong>CEO, Huddle</strong>
-          </div>
-        </section>
-        <!-- imagen -->
-        <section class="card-title1">
-            <img src="images/illustration-2.svg" id="imagen2" alt="ilustracion2">
-        </section>
+  <div class="parte">
+    <section class="partegris">
+      <div class="productive">
+        <!---falta poner la parte gris-->
+        <h2>stay productive wherever you are<h2>
+            <article>
+              <p>
+                Never let location be an issue an accesing your files.Fylo has you covered
+                for all of your file storage needs.
+              </p>
+              <p>
+                Securely share file and folders with friends,family and colleges for live colalaboration.
+                No email attachaments required!
+              </p>
+            </article>
+            <a href="#">see how flyo works</a>
       </div>
-
-      <!---maquetado de Jhonatan-->
-
-
-      <!---maquetado de andrea-->
-
-      <section class="sec-get-early">
-        <div class="">
-          <h1> Get early access today </h1>
-          <p>It only takes a minute to sign up and our free starter tier</br> is extremely generous.
-            If you have any questions, our support team </br>would be happy to help you.</p>
-          </div>
-        <div>
-          <form class="get-early">
-            <div class="form-get-stared">
-              <input type="email" class="form-control" placeholder="email@example.com">
-              <button type="submit">Get Started For Free</button>
-          </form>
-        </div>
-      </section>
-
-      <!---maquetado de andrea-->
-
-
-      <!---maquetado    jhonatan-->
-      <footer>
-        <div>
-          <a>
-            <img src="./images/logo.svg"> Fylo
-          </a>
-          <br>
-          <a> 
-          <i class="fas fa-phone-alt">Phone: +1-543-123-4567</i></a>
-          <br>
-          <a>
-            <img src="/images/icon-email.svg"> example@flyo.com
-          </a>
-        </div>
-        <div>
-          <ul>
-            <li>About Us</li>
-            <li>Jobs</li>
-            <li>Press</li>
-            <li>Blogg</li>
-          </ul>
-        </div>
-
-        <div>
-          <ul>
-            <li>Contact Us</li>
-            <li>Terms</li>
-            <li>Privacy</li>
-          </ul>
-        </div>
-
-        <div>
-          <a href=""><i class="fab fa-facebook"></i></a>
-          <a href=""><i class="fab fa-twitter"></i></a>
-          <a href=""><i class="fab fa-instagram"></i></a>
+      <!-- tarjeta -->
+      <div class="tarjeta">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat soluta minima unde quisquam aperiam, rem
+          dolores at quas voluptatum quidem, sequi placeat porro et tempora iure excepturi aspernatur, accusamus ipsa!
+        </p>
+        <img src="./images/avatar-testimonial.jpg">
+        <span>Kyle Burton Founder</span>
+        <strong>CEO, Huddle</strong>
       </div>
-    </footer>
-  
-    <!--maquetado Jhonatan-->
+    </section>
+    <!-- imagen -->
+    <section class="card-title1">
+      <img src="images/illustration-2.svg" id="imagen2" alt="ilustracion2">
+    </section>
+  </div>
+
+  <section class="sec-get-early">
+    <div class="">
+      <h1> Get early access today </h1>
+      <p>It only takes a minute to sign up and our free starter tier</br> is extremely generous.
+        If you have any questions, our support team </br>would be happy to help you.</p>
+    </div>
+    <div>
+      <form class="get-early">
+        <div class="form-get-stared">
+          <input type="email" class="form-control" placeholder="email@example.com">
+          <button type="submit">Get Started For Free</button>
+      </form>
+    </div>
+  </section>
+
+  <footer>
+    <div>
+      <a>
+        <img src="./images/logo.svg"> Fylo
+      </a>
+      <br>
+      <a>
+        <i class="fas fa-phone-alt">Phone: +1-543-123-4567</i></a>
+      <br>
+      <a>
+        <img src="/images/icon-email.svg"> example@flyo.com
+      </a>
+    </div>
+    <div>
+      <ul>
+        <li>About Us</li>
+        <li>Jobs</li>
+        <li>Press</li>
+        <li>Blogg</li>
+      </ul>
+    </div>
+
+    <div>
+      <ul>
+        <li>Contact Us</li>
+        <li>Terms</li>
+        <li>Privacy</li>
+      </ul>
+    </div>
+
+    <div>
+      <a href=""><i class="fab fa-facebook"></i></a>
+      <a href=""><i class="fab fa-twitter"></i></a>
+      <a href=""><i class="fab fa-instagram"></i></a>
+    </div>
+  </footer>
+
 </body>
 
 </html>
