--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <div class="principal">
     <section class="welcome2">
-      <div class="parrofo1">
+      <div class="parrafo1">
         <h1><span>All your files in one secure
             location,accessible anywhere.</span></h1>
         <p>Fylo stores your most important files in one secure location.
