--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
       </div>
     </div>
   </nav>
-
-
-  <div class="principal">
+<div class="principal">
     <section class="welcome2">
       <div class="parrafo1">
         <h1><span>All your files in one secure
@@ -58,7 +56,6 @@
   <div class="parte">
     <section class="partegris">
       <div class="productive">
-        <!---falta poner la parte gris-->
         <h2>stay productive wherever you are<h2>
             <article>
               <p>
@@ -72,7 +69,6 @@
             </article>
             <a href="#">see how flyo works</a>
       </div>
-      <!-- tarjeta -->
       <div class="tarjeta">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat soluta minima unde quisquam aperiam, rem
           dolores at quas voluptatum quidem, sequi placeat porro et tempora iure excepturi aspernatur, accusamus ipsa!
@@ -82,13 +78,11 @@
         <strong>CEO, Huddle</strong>
       </div>
     </section>
-    <!-- imagen -->
-    <section class="card-title1">
+<section class="card-title1">
       <img src="images/illustration-2.svg" id="imagen2" alt="ilustracion2">
     </section>
   </div>
-
-  <section class="sec-get-early">
+<section class="sec-get-early">
     <div class="">
       <h1> Get early access today </h1>
       <p>It only takes a minute to sign up and our free starter tier</br> is extremely generous.
@@ -102,11 +96,10 @@
       </form>
     </div>
   </section>
-
-  <footer>
-    <div>
+<footer>
+    <div class="imagenb">
       <a>
-        <img src="./images/logo.svg"> Fylo
+        <img src="./images/logo.png"> Fylo
       </a>
       <br>
       <a>
