--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </ul>
     </div>
 
-    <div>
+    <div class="part-footer">
       <a href=""><i class="fab fa-facebook"></i></a>
       <a href=""><i class="fab fa-twitter"></i></a>
       <a href=""><i class="fab fa-instagram"></i></a>
